--- a/template/index.html
+++ b/template/index.html
@@ -22,7 +22,7 @@
 <nav id="scrollingNav" class="col-sm-3 col-lg-2 sidebar-offcanvas">
   <div class="nav-toggle visible-xs">
     <button type="button" class="btn btn-link" data-toggle="offcanvas">
-        <span class="sr-only">Toggle navigation</span>
+        <span class="sr-only">{{__ "Toggle navigation"}}</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
