Add comment to 'html' tag changes

--- a/template/src/css/main.css
+++ b/template/src/css/main.css
@@ -54,6 +54,7 @@ input[type="date"] {
     url('./glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
+/* Add the tag "html" to hide vertical scrollbar on off canvas animation ("left" positioning) */
 html, body {
   overflow-x: hidden;
   font-family: "Source Sans Pro", sans-serif;
