--- a/template/src/css/main.css
+++ b/template/src/css/main.css
@@ -1,7 +1,6 @@
 /**
  * apidoc main css file
  */
-
 /**
  * Define colors
  */
@@ -10,13 +9,16 @@
   --white: #fff;
   --light-gray: #ccc;
   --main-gray: #777;
-  --dark-gray: #2d2d2d;
-  --hover-gray: #666;
+  --dark-gray: #1b1b1f;
+  --hover-gray: #3c3f44;
   --meth-get: green;
   --meth-put: #e5c500;
   --meth-post: #4070ec;
   --meth-delete: #ed0039;
   --red: #dc3545;
+  --border-gray: #3c3f44;
+  --sidebar-bg: #f6f6f7;
+  --text: #1b1b1f;
 }
 
 .color-primary {
@@ -42,16 +44,18 @@ input[type="date"] {
 }
 
 /* ------------------------------------------------------------------------------------------
- * Content
- * ------------------------------------------------------------------------------------------ */
+* Content
+* ------------------------------------------------------------------------------------------ */
 @font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('./glyphicons-halflings-regular.eot');
-  src: url('./glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
-    url('./glyphicons-halflings-regular.woff') format('woff'),
-    url('./glyphicons-halflings-regular.woff2') format('woff2'),
-    url('./glyphicons-halflings-regular.ttf') format('truetype'),
-    url('./glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+  font-family: "Glyphicons Halflings";
+  src: url("./glyphicons-halflings-regular.eot");
+  src: url("./glyphicons-halflings-regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("./glyphicons-halflings-regular.woff") format("woff"),
+    url("./glyphicons-halflings-regular.woff2") format("woff2"),
+    url("./glyphicons-halflings-regular.ttf") format("truetype"),
+    url("./glyphicons-halflings-regular.svg#glyphicons-halflingsregular")
+      format("svg");
 }
 
 /* Hide vertical scrollbar on off canvas animation ("left" positioning) */
@@ -60,7 +64,11 @@ html {
 }
 
 body {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Chinese Quotes", "Inter var", "Inter", ui-sans-serif, system-ui,
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
+    Helvetica, Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  overscroll-behavior: contain;
 }
 
 a:focus {
@@ -68,12 +76,14 @@ a:focus {
 }
 
 #content {
-  margin-top: 10px;
-  padding-left: 10px;
+  margin-top: 0;
+  padding-inline: 3rem;
+  max-height: 100vh;
+  overflow-y: scroll;
 }
 
 p {
-  font-size: 130%;
+  font-size: 16px;
   color: var(--main-gray);
 }
 
@@ -82,7 +92,7 @@ section {
 }
 
 article {
-  border-top: 1px solid var(--light-gray);
+  border-top: 1px solid black;
   padding: 14px 0 30px 0;
 }
 
@@ -93,20 +103,20 @@ table {
 }
 
 th {
-  background-color: var(--main-gray);
-  color: var(--white);
+  background-color: #202126;
+  color: #9a9aa2;
   text-align: left;
   padding: 5px 8px;
-  border: 1px solid var(--main-gray);
+  border: 1px solid #2e2e32;
 }
 
 td {
   padding: 5px;
-  border: 1px solid var(--main-gray);
+  border: 1px solid #2e2e32;
 }
 
 td.code {
-  font-family: "Source Code Pro", monospace;
+  font-family: SF Mono, "Source Code Pro", monospace;
   font-weight: 600;
 }
 
@@ -165,8 +175,8 @@ td.code {
 }
 
 /* ------------------------------------------------------------------------------------------
- * Request method (HTTP verb)
- * ------------------------------------------------------------------------------------------ */
+* Request method (HTTP verb)
+* ------------------------------------------------------------------------------------------ */
 .method {
   font-weight: 600;
   font-size: 15px;
@@ -196,25 +206,22 @@ td.code {
 }
 
 /* ------------------------------------------------------------------------------------------
- * Sidenav
- * ------------------------------------------------------------------------------------------ */
+* Sidenav
+* ------------------------------------------------------------------------------------------ */
 #scrollingNav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
+  background-color: var(--sidebar-bg);
   z-index: 10;
-  background-color: var(--dark-gray);
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+  min-width: 320px;
+  overflow-y: scroll;
+  display: flex;
+  flex-flow: column;
+  padding-right: 0;
+  height: calc(100vh);
 }
 
 .sidenav {
   color: var(--white);
-  position: absolute;
-  top: 50px;
-  left: 0;
-  right: 0;
-  bottom: 0;
   overflow-x: hidden;
   overflow-y: hidden;
 }
@@ -225,64 +232,91 @@ td.code {
 }
 
 .sidenav > li > a {
-  color: var(--white);
+  color: #65656a;
   display: block;
-  padding: 8px 13px;
+  padding: 8px 9px;
+  padding-right: 1rem;
+  transition: color 0.2s;
 }
 
 /* non active sidenav link are highlighted on hover */
 .sidenav > li:not(.active) > a:hover {
-  background-color: var(--hover-gray);
+  color: var(--primary);
+  background: transparent;
 }
 
 .sidenav > li.nav-header {
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .sidenav > li.nav-header > a {
-  padding: 5px 15px;
-  font-weight: 700;
-  font-size: 16px;
-  background-color: var(--main-gray);
+  padding: 5px 9px;
+  font-weight: 600;
+  font-size: 1.4rem;
+  color: #3c3c43;
 }
-
 
 .sidenav > li.active > a {
   position: relative;
-  background-color: var(--primary);
-  color: var(--white);
+  color: var(--primary);
 }
 
 /**
- * TODO: commented out for the moment
+* TODO: commented out for the moment
 .sidenav > li.has-modifications a {
-  border-right: 4px solid var(--main-gray);
+border-right: 4px solid var(--main-gray);
 }
 
 .nav-list-item :not(.is-new) {
-  border-left: 4px solid var(--main-gray);
+border-left: 4px solid var(--main-gray);
 }
 
 .sidenav > li.is-new a {
-  border-left: 4px solid var(--primary);
+border-left: 4px solid var(--primary);
 }
 */
+.nav-toggle {
+  position: sticky;
+  left: 0;
+  background: #fff;
+  width: 100%;
+  top: 0;
+  border-bottom: 1px solid #e2e2e3;
+}
+
+#scrollingNav {
+  padding-top: 4rem;
+}
+
+.nav-toggle .btn {
+  height: 4rem;
+  padding: 0.9rem;
+}
+
+.nav-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+  background-color: #67676c;
+}
 
 /*
- * Off Canvas
- * --------------------------------------------------
- */
-@media screen and (max-width: 767px) {
+* Off Canvas
+* --------------------------------------------------
+*/
+@media screen and (max-width: 960px) {
   #content {
-    margin-top: 58px;
+    max-width: 752px;
+    margin-inline: auto;
   }
 
   .row-offcanvas {
     position: relative;
-    -webkit-transition: all .25s ease-out;
-    -o-transition: all .25s ease-out;
-    transition: all .25s ease-out;
+    -webkit-transition: all 0.25s ease-out;
+    -o-transition: all 0.25s ease-out;
+    transition: all 0.25s ease-out;
     left: 0;
   }
 
@@ -294,60 +328,55 @@ td.code {
   .row-offcanvas .sidebar-offcanvas {
     position: absolute;
     top: 0;
-    left: -200px !important; /* 6 columns */
-    width: 100%; /* 6 columns */
+    left: -320px !important;
+    /* 6 columns */
+    width: 100%;
+    /* 6 columns */
     max-width: 200px;
   }
 
-  .nav-toggle {
-    position: fixed;
-    left: 0;
-    background: var(--dark-gray);
-    width: 100%;
-  }
-  
-  .nav-toggle .btn {
-    margin: 10px 14px;
-  }
-  .nav-toggle .icon-bar {
-    display: block;
-    width: 22px;
-    height: 2px;
-    border-radius: 1px;
-    background-color: var(--white);
-  }
   .nav-toggle .icon-bar + .icon-bar {
     margin-top: 4px;
   }
 
   .row-offcanvas.active .sidebar-offcanvas {
-    left: 0 !important; /* 6 columns */
+    left: 0 !important;
+    /* 6 columns */
   }
-  .row-offcanvas.active, .row-offcanvas.active .nav-toggle {
-    left: 200px;
+
+  .row-offcanvas.active,
+  .row-offcanvas.active .nav-toggle {
   }
+
   /* Styling the three lines to make it an X */
   .row-offcanvas.active .nav-toggle .btn > .icon-bar {
     transform: rotate(45deg) translate(-4px, -4px);
   }
+
   .row-offcanvas.active .nav-toggle .btn .icon-bar:nth-child(2) {
     display: none;
   }
+
   .row-offcanvas.active .nav-toggle .btn .icon-bar:nth-child(3) {
     transform: rotate(-45deg);
   }
 }
 
 /* ------------------------------------------------------------------------------------------
- * Side nav search
- * ------------------------------------------------------------------------------------------ */
+* Side nav search
+* ------------------------------------------------------------------------------------------ */
 .sidenav-search {
-  padding: 16px 10px 10px;
-  background-color: var(--dark-gray);
+  padding: 1.6rem 1rem 1rem 0;
+  position: relative;
 }
 
 .sidenav-search .search {
   height: 26px;
+  background-color: #161618;
+  border: none;
+  padding: 1.9rem;
+  color: white;
+  outline: 1px solid transparent;
 }
 
 .search-reset {
@@ -357,33 +386,34 @@ td.code {
   width: 20px;
   height: 20px;
   text-align: center;
-  right: 28px;
-  top: 18px;
-  background-color: #fff;
+  right: 24px;
+  top: 26px;
+  color: #96969d;
 }
 
 /* ------------------------------------------------------------------------------------------
- * Prism - Toolbar
- * ------------------------------------------------------------------------------------------ */
+* Prism - Toolbar
+* ------------------------------------------------------------------------------------------ */
 div.code-toolbar.code-toolbar > .toolbar {
-  top: .4rem;
-  right: .4rem;
+  top: 0.4rem;
+  right: 0.4rem;
 }
-div.code-toolbar.code-toolbar > .toolbar > .toolbar-item > button:hover, 
+
+div.code-toolbar.code-toolbar > .toolbar > .toolbar-item > button:hover,
 div.code-toolbar.code-toolbar > .toolbar > .toolbar-item > button:focus {
   color: var(--white);
 }
+
 div.code-toolbar.code-toolbar > .toolbar > .toolbar-item > button {
   color: var(--light-gray);
-  padding: .5em;
+  padding: 0.5em;
   background: var(--hover-gray);
-  box-shadow: 0 2px 1px 1px rgba(0,0,0,.5);
+  box-shadow: 0 2px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
 /* ------------------------------------------------------------------------------------------
- * Compare
- * ------------------------------------------------------------------------------------------ */
-
+* Compare
+* ------------------------------------------------------------------------------------------ */
 ins {
   background: #60d060;
   text-decoration: none;
@@ -434,9 +464,8 @@ tr.del td {
 }
 
 /* ------------------------------------------------------------------------------------------
- * Spinner
- * ------------------------------------------------------------------------------------------ */
-
+* Spinner
+* ------------------------------------------------------------------------------------------ */
 #loader {
   position: absolute;
   width: 100%;
@@ -454,11 +483,12 @@ tr.del td {
   position: relative;
 }
 
-.container1 > div, .container2 > div, .container3 > div {
+.container1 > div,
+.container2 > div,
+.container3 > div {
   width: 14px;
   height: 14px;
   background-color: #0088cc;
-
   border-radius: 100%;
   position: absolute;
   -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
@@ -484,10 +514,25 @@ tr.del td {
   transform: rotateZ(90deg);
 }
 
-.circle1 { top: 0; left: 0; }
-.circle2 { top: 0; right: 0; }
-.circle3 { right: 0; bottom: 0; }
-.circle4 { left: 0; bottom: 0; }
+.circle1 {
+  top: 0;
+  left: 0;
+}
+
+.circle2 {
+  top: 0;
+  right: 0;
+}
+
+.circle3 {
+  right: 0;
+  bottom: 0;
+}
+
+.circle4 {
+  left: 0;
+  bottom: 0;
+}
 
 .container2 .circle1 {
   -webkit-animation-delay: -1.1s;
@@ -495,8 +540,8 @@ tr.del td {
 }
 
 .container3 .circle1 {
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
 }
 
 .container1 .circle2 {
@@ -545,46 +590,58 @@ tr.del td {
 }
 
 @-webkit-keyframes bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0.0) }
-  40% { -webkit-transform: scale(1.0) }
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+  }
+
+  40% {
+    -webkit-transform: scale(1);
+  }
 }
 
 @keyframes bouncedelay {
-  0%, 80%, 100% {
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 40% {
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
+  0%,
+  80%,
+  100% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  }
+
+  40% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
   }
 }
 
 /* ------------------------------------------------------------------------------------------
- * Tabs
- * ------------------------------------------------------------------------------------------ */
+* Tabs
+* ------------------------------------------------------------------------------------------ */
 ul.nav-tabs {
   margin: 0;
+  background-color: #161618;
+  border-bottom-color: #000000;
 }
 
-p.deprecated span{
+p.deprecated span {
   color: var(--red);
   font-weight: bold;
   text-decoration: underline;
 }
 
 /**
- * Footer
- */
+* Footer
+*/
 #generator {
-  padding: 10px 0;
+  padding: 45px 0;
+  border-top: 1px solid black;
 }
 
 /* ------------------------------------------------------------------------------------------
- * Print
- * ------------------------------------------------------------------------------------------ */
-
+* Print
+* ------------------------------------------------------------------------------------------ */
 @media print {
-
   #sidenav,
   #version,
   #versions,
@@ -607,7 +664,7 @@ p.deprecated span{
   }
 
   p {
-    color: #000000
+    color: #000000;
   }
 
   pre {
@@ -619,5 +676,145 @@ p.deprecated span{
     position: relative;
     margin: 10px 0 20px 0;
   }
+}
 
-} /* /@media print */
+/* /@media print */
+.main {
+  display: flex;
+  max-height: 100vh;
+}
+
+html {
+  overscroll-behavior: contain;
+}
+
+div#sidenav {
+}
+
+.sidenav-search .search:hover,
+.sidenav-search .search:focus {
+  box-shadow: none;
+  outline: solid 1px var(--primary);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --sidebar-bg: #1b1b1f;
+    --text: #eee;
+  }
+
+  body {
+    background-color: var(--dark-gray);
+    color: var(--white);
+  }
+
+  .sidenav > li.nav-header > a {
+    color: aliceblue;
+  }
+
+  .sidenav > li > a {
+    color: #96969d;
+  }
+
+  .nav-toggle {
+    background-color: #1b1b1f;
+    border-bottom-color: black;
+  }
+
+  .nav-toggle .btn {
+    color: var(--white);
+  }
+
+  .well {
+    background: #161618;
+    border: 1px solid black;
+  }
+}
+
+h1 {
+  font-size: 32px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+p {
+  color: var(--text);
+  font-weight: 300;
+  line-height: 28px;
+  letter-spacing: 0px;
+}
+
+button#version {
+  background-color: var(--background);
+  color: var(--text);
+  font-size: 14px;
+  padding: 7px 10px;
+  border: 1px solid var(--border-gray);
+}
+
+.nav-toggle.visible-xs {
+  display: flex !important;
+  align-items: center;
+  height: 4rem;
+  padding-inline: 1rem;
+  z-index: 11;
+  width: 100vw;
+}
+
+pre[class*="language-"] {
+  background: #161618;
+  border: none;
+  margin-top: 0;
+}
+
+table p {
+  font-size: 14px;
+}
+
+.dropdown-menu {
+  background-color: #202126;
+  padding: 0;
+}
+
+.dropdown-menu li.divider {
+  background-color: black;
+  margin: 0;
+}
+
+.dropdown-menu > li > a:hover {
+  color: white;
+  background-color: transparent;
+}
+
+pre code[class*="language-"] {
+  font-size: 14px;
+}
+
+#generator p {
+  color: #95959c;
+  font-size: 14px;
+  margin: 0;
+}
+
+code {
+  color: var(--primary);
+  background-color: #282a2f;
+  padding-inline: 0.5em;
+}
+
+.btn {
+  border-radius: 20px;
+  padding-inline: 1.4rem;
+  font-weight: 500;
+}
+
+div#project {
+  border-bottom: 1px solid #e2e2e3;
+  padding-bottom: 4rem;
+}
+
+.container-fluid {
+  padding-left: 0;
+}
